# AllNotifications

./: .env.sample  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
controls/: Database.py  View.py
files/: database.sql
models/: Element.py  ProviderLogging.py
networks/: HttpClients.py  Requests.py  exceptions.py
notifiers/: NotifierClients.py
providers/: BaseProvider.py  Comick.py  MReader.py  MangaDemon.py  MangaDex.py  MangaNato.py  MangaWorld.py  MangaWorldAdult.py  Manhwax.py  ReadM.py  __init__.py
storages/: BaseStorage.py  ComicsDBStorage.py  __init__.py
utils/: headers.py  logger.py  utils.py
